<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.stutiguias</groupId>
  <artifactId>Mcpk</artifactId>
  <version>0.7</version>
  <name>Mcpk-${project.version}</name>
  <description>Minecraft Player Killer</description>


  <repositories>
  
    <!-- Bukkit -->
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
    </repository>
    
    <!-- vault -->
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>


  </repositories>

  <dependencies>

    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.20.4-R0.1-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7.1</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>
  
  <build>
    <finalName>${project.name}</finalName>
    <sourceDirectory>${basedir}/src/main/java/</sourceDirectory>
    
    <resources>
      <resource>
        <targetPath>.</targetPath>
        <filtering>true</filtering>
        <directory>${basedir}/src/main/resources/</directory>
        <includes>
          <include>plugin.yml</include>
          <include>config.yml</include>
          <include>eng.yml</include>
        </includes>
      </resource>
    </resources>
    
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      
    </plugins>
  </build>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>8</maven.compiler.release>
  </properties>
</project>
